docker build and push on go.yml

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,4 +25,15 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: go test -v ./...     
+   
+    - name: Build & push Docker image
+      uses: mr-smithers-excellent/docker-build-push@v6
+      with:
+        image: aidanakhankeldieva/golang
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+ 
+
