--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,10 @@ jobs:
       - name: Install Docker
         run: |
           sudo apt-get update
+          sudo apt-get upgrade
+          sudo apt-get remove containerd runc
+          sudo apt-get clean
+          sudo apt-get autoclean
           sudo apt-get install -y docker.io
 
       - name: Login to DockerHub
