--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,8 +52,8 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y ansible
 
-      - name: Login to DockerHub
-        run: docker login -u ${{ env.DOCKERHUB_USERNAME }} -p ${{ env.DOCKERHUB_PASSWORD }}
+      # - name: Login to DockerHub
+      #   run: docker login -u ${{ env.DOCKERHUB_USERNAME }} -p ${{ env.DOCKERHUB_PASSWORD }}
 
       - name: Run Ansible Playbook
         run: |
