--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -1,6 +1,7 @@
 all:
   hosts:
     my_ec2_instance:
-      ansible_host: 18.214.159.174
+      # ansible_host: 18.214.159.174
+      ansible_host: ec2-18-214-159-174.compute-1.amazonaws.com
       ansible_user: ec2-user
-      ansible_ssh_private_key_file: /Users/aidanakhankeldieva/Downloads/MyEC2Key.pem
+      ansible_ssh_private_key_file: ~/Downloads/MyEC2Key.pem
