--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -5,4 +5,4 @@ all:
       ansible_host: ec2-18-214-159-174.compute-1.amazonaws.com
       ansible_user: ec2-user
       ansible_ssh_common_args: "-o StrictHostKeyChecking=no"
-      ansible_ssh_private_key_file: "~/Downloads/MyEC2Key.pem"
+      ansible_ssh_private_key_file: "/Users/aidanakhankeldieva/Downloads/MyEC2Key.pem"
