--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,4 +57,4 @@ jobs:
 
       - name: Run Ansible Playbook
         run: |
-          ansible-playbook -i ansible/inventory.yml ansible/playbook.yml
+          ansible-playbook -i ansible/inventory.yml ansible/playbook.yml -vvv
