--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,11 @@ jobs:
       # - name: Login to DockerHub
       #   run: docker login -u ${{ env.DOCKERHUB_USERNAME }} -p ${{ env.DOCKERHUB_PASSWORD }}
 
+      - name: Write EC2 private key
+      run: |
+        echo "${{ secrets.EC2_PRIVATE_KEY }}" > /home/runner/ec2_key.pem
+        chmod 600 /home/runner/ec2_key.pem
+
       - name: Run Ansible Playbook
         run: |
           ansible-playbook -i ansible/inventory.yml ansible/playbook.yml -vvv
