--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,8 +57,8 @@ jobs:
 
       - name: Write EC2 private key
         run: |
-          echo "${{ secrets.EC2_PRIVATE_KEY }}" > /home/runner/ec2_key.pem
-          chmod 600 /home/runner/ec2_key.pem
+          echo "${{ secrets.EC2_PRIVATE_KEY }}" > /home/runner/MyEC2Key.pem
+          chmod 600 /home/runner/MyEC2Key.pem
 
       - name: Run Ansible Playbook
         run: |
