--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,33 +47,16 @@ jobs:
           aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Run playbook
-        uses: dawidd6/action-ansible-playbook@v2
-        with:
-          # Required, playbook filepath
-          playbook: playbook.yml
-          # Optional, directory where playbooks live
-          directory: ansible/
-          # Optional, SSH private key
-          key: ${{secrets.EC2_PRIVATE_KEY}}
-          # Optional, literal inventory file contents
-          inventory: |
-            [all]
-            hosts:
-            my_ec2_instance:
-            ansible_host: ec2-18-214-159-174.compute-1.amazonaws.com
-            ansible_user: ec2-user
+      - name: Install Ansible
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ansible
 
-            # - name: Install Ansible
-            #   run: |
-            #     sudo apt-get update
-            #     sudo apt-get install -y ansible
+      - name: Write EC2 private key
+        run: |
+          echo "${{ secrets.EC2_PRIVATE_KEY }}" > /home/runner/MyEC2Key.pem
+          chmod 600 /home/runner/MyEC2Key.pem
 
-            # - name: Write EC2 private key
-            #   run: |
-            #     echo "${{ secrets.EC2_PRIVATE_KEY }}" > /home/runner/MyEC2Key.pem
-            #     chmod 600 /home/runner/MyEC2Key.pem
-
-            # - name: Run Ansible Playbook
-            #   run: |
-            #     ansible-playbook -i ansible/inventory.yml ansible/playbook.yml -vvv
+      - name: Run Ansible Playbook
+        run: |
+          ansible-playbook -i ansible/inventory.yml ansible/playbook.yml --private-key /home/runner/MyEC2Key.pem -vvv
