--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ env:
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
   DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+  ANSIBLE_HOST_KEY_CHECKING: false
 
 jobs:
   build:
@@ -48,7 +49,7 @@ jobs:
       - name: Write EC2 private key
         run: |
           echo "${{ secrets.EC2_PRIVATE_KEY }}" > /home/runner/MyEC2Key.pem
-          chmod 600 /home/runner/MyEC2Key.pem
+          chmod 700 /home/runner/MyEC2Key.pem
 
       - name: Run Ansible Playbook
         env:
