--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -6,8 +6,23 @@
     - name: Install Docker
       become: true
       apt:
-        name: docker.io
+        name:
+          - docker.io
+          - python3
+          - python3-pip
+          - python3-dev
+          - python3-setuptools
+          - apt-transport-https
+          - ca-certificates
+          - curl
+          - gnupg
+          - lsb-release
         state: present
+
+    - name: Install Docker Python library
+      become: true
+      pip:
+        name: docker
 
     - name: Pull Docker image
       docker_image:
