--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -6,23 +6,19 @@
     - name: Install Docker
       become: true
       apt:
-        name:
-          - docker.io
-          - python3
-          - python3-pip
-          - python3-dev
-          - python3-setuptools
-          - apt-transport-https
-          - ca-certificates
-          - curl
-          - gnupg
-          - lsb-release
+        name: docker.io
         state: present
 
-    - name: Install Docker Python library
-      become: true
-      pip:
-        name: docker
+    - name: Update apt cache
+      raw: sudo apt-get update
+      register: apt_update
+      changed_when: false
+
+    - name: Install python3-apt
+      apt:
+        name: python3-apt
+        state: present
+      when: apt_update is success
 
     - name: Pull Docker image
       docker_image:
