--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -30,4 +30,9 @@
         name: go-app
         image: aidanakhankeldieva/golang
         state: started
-        restart_policy: always
+      register: docker_container_result
+      restart_policy: always
+
+    - name: Print Docker container information
+      debug:
+        var: docker_container_result
