--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -46,16 +46,16 @@
       debug:
         var: docker_container_result
 
-    - name: Check Go app health
-      uri:
-        url: http://ec2-18-214-159-174.compute-1.amazonaws.com:8080/health
-        method: GET
-        return_content: yes
-      register: health_check_result
+    # - name: Check Go app health
+    #   uri:
+    #     url: http://ec2-18-214-159-174.compute-1.amazonaws.com:8080/health
+    #     method: GET
+    #     return_content: yes
+    #   register: health_check_result
 
-    - name: Verify Go app health
-      assert:
-        that:
-          - health_check_result.status == 200
-        fail_msg: "Go app health check failed"
-        success_msg: "Go app is running"
+    # - name: Verify Go app health
+    #   assert:
+    #     that:
+    #       - health_check_result.status == 200
+    #     fail_msg: "Go app health check failed"
+    #     success_msg: "Go app is running"
