--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -40,6 +40,8 @@
         name: go-app
         image: aidanakhankeldieva/golang
         state: started
+        ports:
+          - "8080:8080"
       register: docker_container_result
 
     - name: Print Docker container information
