--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,9 @@ env:
   DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
   DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
   ANSIBLE_HOST_KEY_CHECKING: false
+  ANSIBLE_HOST: ${{ secrets.ANSIBLE_HOST }}
+  ANSIBLE_USER: ${{ secrets.ANSIBLE_USER }}
+  AWS_EC2_PRIVATE_KEY: ${{secrets.EC2_PRIVATE_KEY}}
 
 jobs:
   build:
@@ -49,7 +52,7 @@ jobs:
 
       - name: Write EC2 private key
         run: |
-          echo "${{ secrets.EC2_PRIVATE_KEY }}" > /home/runner/MyEC2Key.pem
+          echo "${{ env.AWS_EC2_PRIVATE_KEY }}" > /home/runner/MyEC2Key.pem
           chmod 700 /home/runner/MyEC2Key.pem
 
       - name: Run Ansible Playbook
@@ -58,4 +61,4 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: us-east-1
         run: |
-          ansible-playbook -i ansible/inventory.yml ansible/playbook.yml --private-key /home/runner/MyEC2Key.pem -vvv
+          ansible-playbook -i ansible/inventory.yml ansible/playbook.yml --private-key /home/runner/MyEC2Key.pem -vvv --extra-vars "ansible_host=${{ env.ANSIBLE_HOST }} ansible_user=${{ env.ANSIBLE_USER }}"
