--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -1,6 +1,6 @@
 all:
   hosts:
     my_ec2_instance:
-      ansible_host: ec2-35-170-66-85.compute-1.amazonaws.com
-      ansible_user: ec2-user
-      ansible_ssh_private_key_file: "/home/runner/MyEC2Key.pem"
+      ansible_host: "{{ ansible_host }}"
+      ansible_user: "{{ ansible_user }}"
+      # ansible_ssh_private_key_file: "/home/runner/MyEC2Key.pem"
